--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,5 +42,9 @@
         android:id="@+id/searchFragment"
         android:name="com.example.myapplication.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_viewFragment"
+            app:destination="@id/viewFragment" />
+    </fragment>
 </navigation>
